--- a/index.html
+++ b/index.html
@@ -11,10 +11,32 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-
-    <div id="game-board">
-        <canvas id="canvas" width="700" height="700"></canvas>
+    <div id="container">
+      <div id="splash-container">
+      <img
+        src="images/splash-screen.png"
+        alt="map background"
+        id="background-img"
+      />
+      <h1 id="title">City Snake</h1>
+      <button id="start-button">Start Game</button>
+      </div>
+    
+      <div id="game-board">
+        <canvas id="canvas" width="500" height="500"></canvas>
+      </div>
+      <div id="final-screen">
+        <p>Score</p>
+        <button id="restart"></button>
+      </div>
     </div>
+  </div>
+    <!--  -->
+
+    <script type="text/javascript" src="js/CanvasBoard.js"></script>
+    <script type="text/javascript" src="js/Tram.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+
+
   </body>
 </html>
