--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
         id="background-img"
       />
       <h1 id="title">City Snake</h1>
+      <button id="reset-button">Reset Game</button>
       <button id="start-button">Start Game</button>
+      <p id="instructions">Use the arrows to control the snake and pick up passengers!</p>
+      <div id="game-board">
+        <canvas id="canvas"></canvas>
+      </div>
       </div>
     
-      <div id="game-board">
-        <canvas id="canvas" width="500" height="500"></canvas>
-      </div>
       <div id="final-screen">
         <p>Score</p>
-        <button id="restart"></button>
       </div>
     </div>
   </div>
-    <!--  -->
+ 
 
     <script type="text/javascript" src="js/CanvasBoard.js"></script>
     <script type="text/javascript" src="js/Tram.js"></script>
